<resources>
    <string name="app_name">Контролер</string>
    <string name="text_font">sans-serif-medium</string>

    <string name="app_version_label">Версия: %d</string>
    <string name="login_placeholder">Логин</string>
    <string name="password_placeholder">Пароль</string>
    <string name="remember_password">Запомнить пароль</string>
    <string name="login_button_text">ВОЙТИ</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_map_button_text">Посмотреть карту</string>
    <string name="examine_button_text">Я ознакомился</string>
    <string name="edition_label">Издание:</string>
    <string name="dates_label">Даты:</string>
    <string name="brigade_label">Бригадир:</string>
    <string name="area_label">Участок:</string>
    <string name="city_label">Наc/п:</string>
    <string name="prints_count_label">Тираж:</string>
    <string name="pack_count_label">Пачек:</string>
    <string name="remain_label">Остаток:</string>
    <string name="storage_label">Склад:</string>
    <string name="close_task_button">Закрыть задание</string>
    <string name="show_task_on_map">Показать на карте</string>
    <string name="sort_standart_button">Стандартная</string>
    <string name="sort_by_time_button">По времени</string>
    <string name="sort_alphabetic_button">По алфавиту</string>
    <string name="user_explanation_hint">Ваше примечание</string>
    <string name="delimeter">-</string>
    <string name="entrance_code">Код:</string>
    <string name="entrance_euro_key">Евро</string>
    <string name="layout_error">ПСНР</string>
    <string name="lookout">Вахта</string>
    <string name="stacked">Стопка</string>
    <string name="entrance_key">Подъезд</string>
    <string name="close_entrance_button">Закрыть подъезд</string>
    <string name="broken">Слом</string>
    <string name="not_confirmed">Нет</string>
    <string name="not_regular">НеРг</string>
    <string name="regular">Да</string>
    <string name="has_papers">Да</string>
    <string name="hasnt_papers">Нет</string>
    <string name="user_filter_label">Распр-тель:</string>
    <string name="city_filter_label">Город:</string>
    <string name="string_fitler_label">Улица:</string>
    <string name="district_filter_label">Округ:</string>
    <string name="region_filter_label">Район:</string>
    <string name="filter_apply_button">Начать (%s)</string>
    <string name="entrance_list_back">Назазд</string>
    <string name="task_online_button">Онлайн</string>
    <string name="control_dates_label">Даты контроля:</string>
    <string name="description_label">Примечание:</string>
    <string name="start_tasks">Начать выполнение</string>
    <string name="floors_label">Эт.:</string>
    <string name="distribution_dates_label">Даты распространения:</string>
    <string name="task_list_hint_text">Ниже приведён список активных заданий. Нажмите на задание чтобы просмотреть подробности. Отметьте справа те задания, которые начинаете выполнять и нажмите кнопку "Начать выполнение".</string>
    <string name="address_list_hint_text">Ниже приведён список адресов и доставляемых по ним заданий. Нажмите на иконку справа от адреса чтобы посмотреть адрес на карте. Нажмите на задание для заполнения отчёта о доставке.</string>
    <string name="entrance_closed_label">П. З.</string>
    <string name="yandex_map_add_button">Добавить (%s)</string>
    <string name="filter_use_planned_tasks">Учитывать запланированные дома</string>


    <string name="make_photo_button">СДЕЛАТЬ ФОТО</string>
    <string name="close_address_button">Закрыть дом</string>
    <string name="rejection">Отказ</string>
    <string name="pile">Стопка</string>
    <string name="watch">Вахта</string>
    <string name="euro">Евро</string>
    <string name="pause">Пауза</string>
    <string name="unknown_network_error">Ошибка соединения с интернетом</string>
    <string name="unknown_runtime_error">Неизвестная ошибка</string>
    <string name="menu_title">Меню</string>
    <string name="menu_tasks">Задачи</string>
    <string name="menu_logout">Выйти</string>
    <string name="login_no_network">Нет ответа от сервера</string>
    <string name="ok">Ок</string>
    <string name="login_offline">Войти оффлайн</string>
    <string name="login_offline_error">Невозможно войти оффлайн. Необходима авторизация через сервер.</string>
    <string name="menu_info">Отправить crash.log</string>
    <string name="menu_uuid">Скопировать UUID</string>
    <string name="crash_log_not_found">crash.log отсутствует</string>
    <string name="copied_to_clipboard">Скопировано в буфер обмена</string>
    <string name="send">Отправить</string>
    <string name="update_new_available">Доступно новое обновление</string>
    <string name="update_install">Установить</string>
    <string name="update_later">Напомнить позже</string>
    <string name="update_install_error">Не удалось загрузить файл обновления</string>
    <string name="update_progress">Загрузка %d/100</string>
    <string name="update_cant_get_info">Не удалось получить информацию об обновлениях</string>
    <string name="login_need_update">Необходимо обновить приложение</string>
    <string name="login_need_network">Необходимо включить передачу данных</string>
    <string name="network_request_enable">Небходимо включить передачу данных</string>
    <string name="time_request_valid">Неверные настройки времени</string>
    <string name="settings">Настройки</string>
    <string name="xiaomi_permissions_request">Необходимо дать доступ к \"Экран блокировки\", \"Всплывающие окна\" и \"Отображать всплывающие окна, когда запущено в фоновом режиме\"</string>
    <string name="request_permissions_rationale">Необходимо дать разрешения:\n%s</string>
    <string name="tasks_title">Список заданий</string>
    <string name="task_list_not_examined">Вы должны ознакомиться с заданием</string>
    <string name="task_list_not_started">Дата начала распространения не наступила</string>
    <string name="task_list_tasks_updated">Задания были обновлены</string>
    <string name="task_list_tasks_created">Обновление прошло успешно</string>
    <string name="task_list_tasks_not_changed">Нет новых заданий</string>
    <string name="task_list_update_in_progress">Обновление в процессе</string>
    <string name="addresses_title">Список адресов</string>
    <string name="address_unknown">Неизвестный адрес</string>
    <string name="task_details_title">Детали задания</string>
    <string name="task_details_photos_required">Необходимы фотографии</string>
    <string name="task_details_column_1">П/уч.</string>
    <string name="task_details_column_2">Адрес</string>
    <string name="task_details_column_3">Тираж</string>
    <string name="task_details_column_4">Прим.</string>
    <string name="task_details_date_rande">%s - %s</string>
    <string name="task_details_publisher">%s #%d</string>
    <string name="task_details_address_bypass">%d    %d</string>
    <string name="fatal_error_title">Произошла непредвиденная ошибка\nКод ошибки: %s</string>
    <string name="image_map_not_found">Файл карты не найден</string>
    <string name="menu_pause">Пауза</string>
    <string name="pause_lunch">Обед</string>
    <string name="pause_load">Дозагрузка</string>
    <string name="pause_cancel">Отмена</string>
    <string name="error_pause_unavailable">Пауза недоступна</string>
    <string name="pause_already_paused">Пауза уже запущена</string>
    <string name="report_close_location_null_error">Не определились координаты отправь крэш лог! \nKoordinatalari aniqlanmadi, xato jurnalini yuborish!</string>
    <string name="report_close_location_far_error">Ты не у дома! Подойди и попробуй еще \nSiz uyning yonida emassiz! Yaqinlashing va qaytadan urining</string>
    <string name="report_close_location_null_warning">Не определились координаты. \nKoordinatalar yo\'q</string>
    <string name="report_close_location_far_warning">Ты не у дома. \nSiz uyda emassiz</string>
    <string name="report_close_paused_warning">Пауза будет прервана</string>
    <string name="cancel">Отмена</string>
    <string name="report_close_no_photos">Необходимо сделать фотографии</string>
    <string name="report_close_ask">КНОПКИ НАЖАЛ?\nОТЧЁТ ОТПРАВЛЯЮ?\n(tugmachalari bosildi? hisobot yuboringmi?)</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="report_gps_loading">Ищем Вас по GPS</string>
    <string name="unknown_runtime_error_code">Неизвестная ошибка (code: %s)</string>
    <string name="share_device_uuid_subject">Мой ID:</string>
    <string name="share_device_uuid_title">Отправить ID устройства</string>
    <string name="yandex_map_title">Карта</string>
    <string name="addresses_more">Ещё %d адресов</string>
    <string name="report_service_query_size">Сервис. В очереди: %d. </string>
    <string name="report_service_network_disabled">Сеть недоступна.</string>
    <string name="task_update_required">Необходимо обновить список заданий</string>
    <string name="later">Позже</string>
    <string name="menu_bottom_info">"Версия: %d | Пользователь: %s "</string>
    <string name="menu_entrances">Запланировано подъездов: %d\nЗакрыто подъездов: %d</string>
    <string name="details_description_column">Прим.</string>
    <string name="details_address_column">Адрес</string>
    <string name="details_filter_column">Фильтр</string>
    <string name="details_filter_value_column">Значение</string>
    <string name="task_list_too_many_filtered">Невозможно выбрать более 3 заданий с фильтрами</string>
    <string name="close_task_error_single">Можно закрыть только одно задание</string>
    <string name="online_no_access">У вас нет прав на составление заданий</string>
    <string name="tasks_items_partial_update_fail">Не удалось загрузить адреса для заданий:\n%s\nЗадания были исключены</string>
    <string name="tasks_items_update_fail">Не удалось загрузить адреса</string>
    <string name="loading">Загрузка</string>
    <string name="button_group_main">Опрос</string>
    <string name="button_group_addition">БезОп</string>
    <string name="app_changed_photo_required">Необходимо фото-подтверждение изменённого диапазона квартир</string>
    <string name="not_determine_photo_required">Необходимо фото-подтверждение статуса НО (не определено)</string>
    <string name="photo_required">Необходимо фото-подтверждение изменённого диапазона квартир</string>
    <string name="close_entrance_dialog_message">Вы действительно хотите закрыть подъезд?</string>
    <string name="close_task_confirmation_message">Вы действительно хотите закрыть задание?</string>
    <string name="map_button_location">Где я?</string>
    <string name="map_button_layer_common">Слой: Общий</string>
    <string name="map_button_layer_predefined">Слой: Предопределённые адреса</string>
    <string name="map_button_layer_task">Слой: %s</string>
    <string name="undefined">НО</string>
    <string name="error_report_tasks_unavailable">Не удалось получить задание</string>
    <string name="wrong_password_error">Неправильный пароль</string>
</resources>
