<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Button
            android:id="@+id/yes_button_main"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:text="@string/regular"
            android:textAllCaps="false"
            app:layout_constraintEnd_toStartOf="@+id/not_regular_button_main"
            app:layout_constraintTop_toTopOf="parent" />

    <Button
            android:id="@+id/not_regular_button_main"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:text="@string/not_regular"
            android:textAllCaps="false"
            app:layout_constraintEnd_toStartOf="@id/no_button_main"
            app:layout_constraintTop_toTopOf="parent" />

    <Button
            android:id="@+id/no_button_main"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:text="@string/not_confirmed"
            android:textAllCaps="false"
            app:layout_constraintEnd_toStartOf="@id/broken_button_main"
            app:layout_constraintTop_toTopOf="parent" />

    <Button
            android:id="@+id/broken_button_main"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:text="@string/broken"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>