<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <Button
            android:id="@+id/yes_button"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:textAllCaps="false"
            app:layout_constraintEnd_toStartOf="@+id/no_button"
            android:text="@string/has_papers"/>

    <Button
            android:id="@+id/no_button"
            android:layout_width="70dp"
            android:layout_height="40dp"
            app:layout_constraintEnd_toStartOf="@id/broken_button"
            android:textAllCaps="false"
            android:text="@string/hasnt_papers"/>

    <Button
            android:id="@+id/broken_button"
            android:layout_width="70dp"
            android:layout_height="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAllCaps="false"
            android:text="@string/broken"/>
</androidx.constraintlayout.widget.ConstraintLayout>