<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
            android:id="@+id/appartament_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/description_button"
            app:layout_constraintBottom_toBottomOf="@id/description_button"
            tools:text="100"
    />

    <Button
            android:id="@+id/yes_button_addition"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:textAllCaps="false"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/no_button_addition"
            android:text="@string/has_papers"/>

    <Button
            android:id="@+id/no_button_addition"
            android:layout_width="70dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/undefined_button_addition"
            android:textAllCaps="false"
            android:text="@string/hasnt_papers"/>


    <Button
            android:id="@+id/undefined_button_addition"
            android:layout_width="70dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/broken_button_addition"
            android:textAllCaps="false"
            android:text="@string/undefined"/>

    <Button
            android:id="@+id/broken_button_addition"
            android:layout_width="70dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAllCaps="false"
            android:text="@string/broken"/>

    <Button
            android:text="Т"
            app:layout_constraintStart_toEndOf="@id/appartament_number"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="32dp"
            android:layout_height="40dp"
            android:id="@+id/description_button"/>


</androidx.constraintlayout.widget.ConstraintLayout>