<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
            android:id="@+id/appartament_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/description_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/description_button"
            tools:text="100" />

    <Button
            android:id="@+id/yes_button_main"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:text="@string/regular"
            android:textAllCaps="false"
            app:layout_constraintEnd_toStartOf="@+id/not_regular_button_main"
            app:layout_constraintStart_toEndOf="@id/description_button"
            app:layout_constraintTop_toTopOf="parent" />

    <Button
            android:id="@+id/not_regular_button_main"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:text="@string/not_regular"
            android:textAllCaps="false"
            app:layout_constraintEnd_toStartOf="@id/no_button_main"
            app:layout_constraintStart_toEndOf="@id/yes_button_main"
            app:layout_constraintTop_toTopOf="parent" />

    <Button
            android:id="@+id/no_button_main"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:text="@string/not_confirmed"
            android:textAllCaps="false"
            app:layout_constraintEnd_toStartOf="@id/undefined_button_main"
            app:layout_constraintStart_toEndOf="@id/not_regular_button_main"
            app:layout_constraintTop_toTopOf="parent" />

    <Button
            android:id="@+id/undefined_button_main"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:text="@string/undefined"
            android:textAllCaps="false"
            app:layout_constraintEnd_toStartOf="@id/broken_button_main"
            app:layout_constraintStart_toEndOf="@id/no_button_main"
            app:layout_constraintTop_toTopOf="parent" />

    <Button
            android:id="@+id/broken_button_main"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:text="@string/broken"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/undefined_button_main"
            app:layout_constraintTop_toTopOf="parent" />

    <Button
            android:id="@+id/description_button"
            android:layout_width="32dp"
            android:layout_height="40dp"
            android:text="Т"
            app:layout_constraintStart_toEndOf="@id/appartament_number"
            app:layout_constraintTop_toTopOf="parent" />


    <ImageView
            android:id="@+id/lock_input_overlay"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clickable="true"
            android:elevation="16dp"
            android:focusable="true"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_camera"
            app:layout_constraintBottom_toBottomOf="@id/undefined_button_main"
            app:layout_constraintEnd_toEndOf="@id/undefined_button_main"
            app:layout_constraintStart_toStartOf="@id/undefined_button_main"
            app:layout_constraintTop_toTopOf="@id/undefined_button_main" />


</androidx.constraintlayout.widget.ConstraintLayout>