<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".presentation.fragments.login.LoginFragment">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/app_version"
            android:text="@string/app_version_label"/>

    <EditText
            android:id="@+id/login_input"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@string/text_font"
            android:hint="@string/login_placeholder"
            android:textSize="16sp"
            android:maxLines="1"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@string/text_font"
            android:hint="@string/password_placeholder"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/login_input"
            app:layout_constraintStart_toStartOf="@+id/login_input"
            app:layout_constraintTop_toBottomOf="@+id/login_input" />

    <TextView
            android:id="@+id/remember_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:drawablePadding="10dp"
            android:fontFamily="@string/text_font"
            android:text="@string/remember_password"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/password_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:clickable="true"
            android:focusable="true"/>

    <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="108dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <Button
            android:id="@+id/login_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:elevation="2dp"
            android:text="@string/login_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
            android:id="@+id/loading"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:elevation="8dp"
            android:background="#DD444444"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone">
        <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:elevation="4dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>